--- a/config/database.yml
+++ b/config/database.yml
@@ -4,33 +4,25 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
+default: &default
+  adapter: sqlite3
+  pool: 5
+  timeout: 5000
 
 development:
-  adapter: postgresql
-  encoding: utf8
-  database: postgres.app
-  pool: 5
-  username: davidlashlee
-  password:
+  <<: *default
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test: &TEST
-  adapter: postgresql
-  encoding: utf8
-  database: test_postgres.app
-  pool: 5
-  username: davidlashlee
-  password:
+test:
+  <<: *default
+  database: db/test.sqlite3
 
 production:
-  adapter: postgresql
-  encoding: utf8
-  database: postgres.app
-  pool: 5
-  username: 
-  password:
+  <<: *default
+  database: db/production.sqlite3
 
 
 
